# cf-cli

./: .gitignore  pyproject.toml
cf/: __main__.py
cf/backend/endpoints/: core.py
cf/backend/endpoints/token/: verify.py
cf/backend/endpoints/user/: info.py
cf/backend/schemas/: organization.py  token.py  user.py  utils.py
cf/cli/: __init__.py
cf/cli/command_groups/: user.py
